#################################################################
# $Id: Makefile.am,v 1.1.1.1 2011/08/18 22:19:44 nsanthi Exp $
#################################################################

#################################################################

noinst_LTLIBRARIES = libConfig.la
Config_common = \
	Configuration.h \
	Configuration.C \
	ConfigurationFileReader.h \
	ConfigurationFileReader.C \
        configio.h \
        configio.C \
	Value.C \
	Value.h

libConfig_la_SOURCES = $(Config_common)

#################################################################
#################################################################
