######################################################################
## $Id: Makefile.am,v 1.1.1.1 2011/08/18 22:19:46 nsanthi Exp $
######################################################################

######################################################################

noinst_HEADERS = \
	Timer.h \
	Type.h \
	Triplet.h

noinst_LTLIBRARIES = libCommon.la 
libCommon_la_SOURCES = \
	Assert.C \
	Assert.h \
	backtrace.C \
	backtrace.h \
	Exception.C \
	Exception.h \
	Values.C \
	Values.h \
	Versions.C \
	Versions.h

######################################################################

