
File_common = \
	File.h \
	File.C \
	FileReader.h \
	FileReader.C \
	UserFields.h \
	UserFields.C \
	Header.h \
	Header.C \
	GenericFileData.h \
	GenericFileData.C \
	StringFileData.h \
	StringFileData.C \
	FileSizeLimiter.h \
	FileSizeLimiter.C \
	fstream.h \
	fstream.C \
	cfstreambuf.h \
	cfstreambuf.C

noinst_LTLIBRARIES = libFile.la

libFile_la_SOURCES = \
	$(File_common)


