######################################################################
## $Id: Makefile.am,v 1.1.1.1 2011/08/18 22:19:46 nsanthi Exp $
######################################################################

######################################################################

noinst_HEADERS = \
	main.h

noinst_LTLIBRARIES = libGlobal.la 


libGlobal_la_SOURCES = \
	OptionManager.h \
	OptionManager.C \
	OptionMap.C \
	OptionMap.h \
	util.C \
	util.h

libGlobal_la_CXXFLAGS = -I/usr/include/boost -I/usr/include/python2.6

######################################################################
######################################################################
