######################################################################

noinst_HEADERS = Random.h 

noinst_LTLIBRARIES = libRandom.la
libRandom_la_SOURCES = Random.C 


libRandom_la_CXXFLAGS = -I/usr/include/boost -I/usr/include/python2.6


######################################################################
######################################################################
