noinst_HEADERS = \
AbstractFactory.h \
AssocVector.h \
EmptyType.h \
Factory.h \
Functor.h \
HierarchyGenerators.h \
MultiMethods.h \
NullType.h \
Singleton.h \
SmallObj.h \
SmartPtr.h \
Threads.h \
Tuple.h \
TypeInfo.h \
TypeManip.h \
TypeTraits.h \
Typelist.h \
Visitor.h \
static_check.h \
readme.txt \
Singleton.cpp \
SmallObj.cpp 


